Ensemble Learning chapter is done

--- a/hands_on_ml2/Ensemble Learning.ipynb
+++ b/hands_on_ml2/Ensemble Learning.ipynb
@@ -866,64 +866,415 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC\n",
+    "from sklearn.svm import SVC, LinearSVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "svc    = SVC(random_state=42, probability=True)\n",
+    "#LinearSVC doen't contain predict_proba. If it's nessesary using predict_proba than use SVC with probability=True\n",
+    "svc    = LinearSVC(random_state=42) \n",
     "forest = RandomForestClassifier(random_state=42, n_jobs=-1)\n",
     "extra  = ExtraTreesClassifier(random_state=42, n_jobs=-1)\n",
-    "hard_voting = VotingClassifier(estimators=[('svc', svc), ('forest', forest), \n",
-    "                                          ('extra', extra)], voting='hard', n_jobs=-1)\n",
-    "soft_voting = VotingClassifier(estimators=[('svc', svc), ('forest', forest), \n",
-    "                                          ('extra', extra)], voting='soft', n_jobs=-1)"
+    "voting = VotingClassifier(estimators=[('svc', svc), ('forest', forest), \n",
+    "                                          ('extra', extra)], voting='hard', n_jobs=-1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Выведем точность для validation set"
+    "3.1. Выведем точность для validation set для hard voting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVC accuracy: 85.15%\n",
+      "RandomForestClassifier accuracy: 97.36%\n",
+      "ExtraTreesClassifier accuracy: 97.43%\n"
+     ]
+    }
+   ],
+   "source": [
+    "voting.fit(x_train, y_train)\n",
+    "for estimator in voting.estimators_:\n",
+    "    y_pred = estimator.predict(x_val)\n",
+    "    score = accuracy_score(y_val, y_pred) * 100\n",
+    "    print(\"{} accuracy: {:.4}%\".format(estimator.__class__.__name__, score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VotingClassifier accuracy: 97.4%\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = voting.predict(x_val)\n",
+    "score = accuracy_score(y_val, y_pred) * 100\n",
+    "print(\"{} accuracy: {:.4}%\".format(voting.__class__.__name__, score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LinearSVC Показывает низкую точность. Удалим его из ассамблеи "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "svc.fit(x_train, y_train)    \n",
-    "y_pred = svc.predict(x_val)\n",
-    "score = accuracy_score(y_val, y_pred)\n",
-    "print(\"SVC accuracy: {:.4}%\".format(score*100))\n",
+    "del voting.estimators_[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VotingClassifier accuracy: 97.35%\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = voting.predict(x_val)\n",
+    "score = accuracy_score(y_val, y_pred) * 100\n",
+    "print(\"{} accuracy: {:.4}%\".format(voting.__class__.__name__, score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Зря убрал LinerSVM, вернем обратно"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/infodba/venv/lib/python3.6/site-packages/sklearn/svm/_base.py:947: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VotingClassifier accuracy: 97.4%\n"
+     ]
+    }
+   ],
+   "source": [
+    "svc.fit(x_train, y_train)\n",
+    "voting.estimators_.append(svc)\n",
+    "y_pred = voting.predict(x_val)\n",
+    "score = accuracy_score(y_val, y_pred) * 100\n",
+    "print(\"{} accuracy: {:.4}%\".format(voting.__class__.__name__, score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.2. Выведем точность для validation set для soft voting\n",
     "\n",
-    "forest.fit(x_train, y_train)  \n",
-    "y_pred = forest.predict(x_val)\n",
-    "score = accuracy_score(y_val, y_pred)\n",
-    "print(\"Random Forest accuracy: {:.4}%\".format(score*100))\n",
+    "Т.к. LinerSVC (в отличие от SVC) не содержит predict_proba его придется удалить."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier\n",
+      "ExtraTreesClassifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "del voting.estimators_[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VotingClassifier accuracy: 97.49%\n"
+     ]
+    }
+   ],
+   "source": [
+    "voting.voting = \"soft\"\n",
+    "y_pred = voting.predict(x_val)\n",
+    "score = accuracy_score(y_val, y_pred) * 100\n",
+    "print(\"{} accuracy: {:.4}%\".format(voting.__class__.__name__, score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Т.о soft voting в данном случае дает лучшую точность.\n",
     "\n",
-    "extra.fit(x_train, y_train)  \n",
-    "y_pred = extra.predict(x_val)\n",
-    "score = accuracy_score(y_val, y_pred)\n",
-    "print(\"Extra Trees accuracy: {:.4}%\".format(score*100))\n",
+    "4. Check using test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VotingClassifier accuracy: 96.98%\n"
+     ]
+    }
+   ],
+   "source": [
+    "voting.voting = \"soft\"\n",
+    "y_pred = voting.predict(x_test)\n",
+    "score = accuracy_score(y_test, y_pred) * 100\n",
+    "print(\"{} accuracy: {:.4}%\".format(voting.__class__.__name__, score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## task 9\n",
     "\n",
-    "hard_voting.fit(x_train, y_train)  \n",
-    "y_pred = hard_voting.predict(x_val)\n",
-    "score = accuracy_score(y_val, y_pred)\n",
-    "print(\"Hard voting accuracy: {:.4}%\".format(score*100))\n",
+    "Run the individual classifiers from the previous exercise to make predictions on the validation set, and create a new training set with the resulting predictions: each training instance is a vector containing the set of predictions from all your classifiers for an image, and the target is the image’s class. Train a classifier on\n",
+    "this new training set. Congratulations, you have just trained a blender, and together with the classifiers they form a stacking ensemble! Now let’s evaluate the ensemble on the test set. For each image in the test set, make predictions with all your classifiers, then feed the predictions to the blender to get the ensemble’s predictions. How does it compare to the voting classifier you trained earlier?\n",
     "\n",
-    "soft_voting.fit(x_train, y_train)  \n",
-    "y_pred = soft_voting.predict(x_val)\n",
-    "score = accuracy_score(y_val, y_pred)\n",
-    "print(\"Soft voting accuracy: {:.4}%\".format(score*100))"
+    "**1. Возьмем классификаторы из предыдущего задания и получим от них предсказания на validation set**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest = voting.estimators_[0]\n",
+    "extra  = voting.estimators_[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVC accuracy: 85.15%\n",
+      "RandomForestClassifier accuracy: 97.36%\n",
+      "ExtraTreesClassifier accuracy: 97.43%\n"
+     ]
+    }
+   ],
+   "source": [
+    "svc_pred = svc.predict(x_val)\n",
+    "score = accuracy_score(y_val, svc_pred) * 100\n",
+    "print(\"{} accuracy: {:.4}%\".format(svc.__class__.__name__, score))\n",
+    "\n",
+    "forest_pred = forest.predict(x_val)\n",
+    "score = accuracy_score(y_val, forest_pred) * 100\n",
+    "print(\"{} accuracy: {:.4}%\".format(forest.__class__.__name__, score))\n",
+    "\n",
+    "extra_pred = extra.predict(x_val)\n",
+    "score = accuracy_score(y_val, extra_pred) * 100\n",
+    "print(\"{} accuracy: {:.4}%\".format(extra.__class__.__name__, score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Создаем  новые входные данные для блендера и обучаем его.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_x = np.c_[svc_pred, forest_pred, extra_pred]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
+       "    max_iter=-1, probability=False, random_state=42, shrinking=True, tol=0.001,\n",
+       "    verbose=False)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blender = SVC(random_state=42)\n",
+    "blender.fit(new_x, y_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Проверим блендер на test set**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blender accuracy: 96.51%\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = svc.predict(x_test)\n",
+    "x2 = forest.predict(x_test)\n",
+    "x3 = extra.predict(x_test)\n",
+    "\n",
+    "new_x_test = np.c_[x1, x2, x3]\n",
+    "y_pred = blender.predict(new_x_test)\n",
+    "score = accuracy_score(y_test, y_pred) * 100\n",
+    "print(\"Blender accuracy: {:.4}%\".format(score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выведем результаты на test set отдельно по каждому предсказателю"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "svc accuracy: 84.38%\n",
+      "forest accuracy: 96.8%\n",
+      "extra accuracy: 97.03%\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = accuracy_score(y_test, x1) * 100\n",
+    "print(\"svc accuracy: {:.4}%\".format(score))\n",
+    "\n",
+    "score = accuracy_score(y_test, x2) * 100\n",
+    "print(\"forest accuracy: {:.4}%\".format(score))\n",
+    "\n",
+    "score = accuracy_score(y_test, x3) * 100\n",
+    "print(\"extra accuracy: {:.4}%\".format(score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVC downs the performans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blender accuracy: 96.57%\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_x = np.c_[forest_pred, extra_pred]\n",
+    "\n",
+    "blender.fit(new_x, y_val)\n",
+    "\n",
+    "new_x_test = np.c_[x2, x3]\n",
+    "y_pred = blender.predict(new_x_test)\n",
+    "score = accuracy_score(y_test, y_pred) * 100\n",
+    "print(\"Blender accuracy: {:.4}%\".format(score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "По дефолту блендер дает меньшую точность чем входящие в него предсказатели 1го слоя. Без подгонки гиперпараметров метод с голосованием показал результа немного лучше.\n",
+    "\n",
+    "Кроме того, можно было бы построить, наверное, pipe_line который снижал необходимость в скучных вычислениях и делал бы блендер более инкапсулированным"
    ]
   },
   {
@@ -950,7 +1301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
