--- a/hands_on_ml2/2020.06.09 - Introduction to ANN.ipynb
+++ b/hands_on_ml2/2020.06.09 - Introduction to ANN.ipynb
@@ -2670,6 +2670,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_openml\n",
+    "\n",
+    "mnist = fetch_openml('mnist_784', version=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = mnist['data'], mnist['target'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(70000, 784)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, y_train = x[:50000] / 255, y[:50000]\n",
+    "x_valid, y_valid = x[50000:-10000] / 255, y[50000:-10000]\n",
+    "x_test, y_test = x[60000:] / 255, y[60000:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keras.backend.clear_session()\n",
+    "np.random.seed(42)\n",
+    "tf.random.set_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnist_model = keras.models.Sequential()\n",
+    "\n",
+    "mnist_model.add(keras.layers.Flatten(input_shape=[784]))\n",
+    "mnist_model.add(keras.layers.Dense(200, activation=\"relu\"))\n",
+    "mnist_model.add(keras.layers.Dense(200, activation=\"relu\"))\n",
+    "mnist_model.add(keras.layers.Dense(10, activation=\"softmax\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnist_model.compile(loss=\"sparse_categorical_crossentropy\", \n",
+    "              optimizer=keras.optimizers.SGD(lr=0.05), \n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 50000 samples, validate on 10000 samples\n",
+      "Epoch 1/100\n",
+      "50000/50000 [==============================] - 10s 208us/sample - loss: 0.3623 - accuracy: 0.8955 - val_loss: 0.2050 - val_accuracy: 0.9399\n",
+      "Epoch 2/100\n",
+      "50000/50000 [==============================] - 9s 174us/sample - loss: 0.1595 - accuracy: 0.9528 - val_loss: 0.1346 - val_accuracy: 0.9603\n",
+      "Epoch 3/100\n",
+      "50000/50000 [==============================] - 9s 171us/sample - loss: 0.1129 - accuracy: 0.9666 - val_loss: 0.1091 - val_accuracy: 0.9684\n",
+      "Epoch 4/100\n",
+      "50000/50000 [==============================] - 9s 174us/sample - loss: 0.0850 - accuracy: 0.9742 - val_loss: 0.0939 - val_accuracy: 0.9735\n",
+      "Epoch 5/100\n",
+      "50000/50000 [==============================] - 9s 186us/sample - loss: 0.0670 - accuracy: 0.9804 - val_loss: 0.0897 - val_accuracy: 0.9734\n",
+      "Epoch 6/100\n",
+      "50000/50000 [==============================] - 9s 180us/sample - loss: 0.0547 - accuracy: 0.9836 - val_loss: 0.0814 - val_accuracy: 0.9758\n",
+      "Epoch 7/100\n",
+      "50000/50000 [==============================] - 9s 181us/sample - loss: 0.0448 - accuracy: 0.9872 - val_loss: 0.0799 - val_accuracy: 0.9764\n",
+      "Epoch 8/100\n",
+      "50000/50000 [==============================] - 9s 184us/sample - loss: 0.0364 - accuracy: 0.9902 - val_loss: 0.0800 - val_accuracy: 0.9769\n",
+      "Epoch 9/100\n",
+      "50000/50000 [==============================] - 9s 173us/sample - loss: 0.0300 - accuracy: 0.9918 - val_loss: 0.0824 - val_accuracy: 0.9770\n",
+      "Epoch 10/100\n",
+      "50000/50000 [==============================] - 9s 187us/sample - loss: 0.0247 - accuracy: 0.9932 - val_loss: 0.1018 - val_accuracy: 0.9711\n",
+      "Epoch 11/100\n",
+      "50000/50000 [==============================] - 9s 178us/sample - loss: 0.0209 - accuracy: 0.9949 - val_loss: 0.0933 - val_accuracy: 0.9745\n",
+      "Epoch 12/100\n",
+      "50000/50000 [==============================] - 9s 175us/sample - loss: 0.0173 - accuracy: 0.9958 - val_loss: 0.0842 - val_accuracy: 0.9749\n",
+      "Epoch 13/100\n",
+      "50000/50000 [==============================] - 9s 176us/sample - loss: 0.0137 - accuracy: 0.9970 - val_loss: 0.0753 - val_accuracy: 0.9802\n",
+      "Epoch 14/100\n",
+      "50000/50000 [==============================] - 9s 177us/sample - loss: 0.0112 - accuracy: 0.9978 - val_loss: 0.0736 - val_accuracy: 0.9805\n",
+      "Epoch 15/100\n",
+      "50000/50000 [==============================] - 9s 175us/sample - loss: 0.0087 - accuracy: 0.9986 - val_loss: 0.0743 - val_accuracy: 0.9806\n",
+      "Epoch 16/100\n",
+      "50000/50000 [==============================] - 9s 179us/sample - loss: 0.0069 - accuracy: 0.9990 - val_loss: 0.0772 - val_accuracy: 0.9798\n",
+      "Epoch 17/100\n",
+      "50000/50000 [==============================] - 9s 174us/sample - loss: 0.0055 - accuracy: 0.9993 - val_loss: 0.0772 - val_accuracy: 0.9803\n",
+      "Epoch 18/100\n",
+      "50000/50000 [==============================] - 9s 174us/sample - loss: 0.0050 - accuracy: 0.9995 - val_loss: 0.0775 - val_accuracy: 0.9810\n",
+      "Epoch 19/100\n",
+      "50000/50000 [==============================] - 9s 182us/sample - loss: 0.0038 - accuracy: 0.9998 - val_loss: 0.0791 - val_accuracy: 0.9809\n",
+      "Epoch 20/100\n",
+      "50000/50000 [==============================] - 9s 179us/sample - loss: 0.0031 - accuracy: 0.9998 - val_loss: 0.0787 - val_accuracy: 0.9807\n",
+      "Epoch 21/100\n",
+      "50000/50000 [==============================] - 9s 173us/sample - loss: 0.0027 - accuracy: 0.9999 - val_loss: 0.0778 - val_accuracy: 0.9813\n",
+      "Epoch 22/100\n",
+      "50000/50000 [==============================] - 9s 178us/sample - loss: 0.0024 - accuracy: 1.0000 - val_loss: 0.0781 - val_accuracy: 0.9809\n",
+      "Epoch 23/100\n",
+      "50000/50000 [==============================] - 9s 175us/sample - loss: 0.0021 - accuracy: 1.0000 - val_loss: 0.0788 - val_accuracy: 0.9812\n",
+      "Epoch 24/100\n",
+      "50000/50000 [==============================] - 9s 178us/sample - loss: 0.0019 - accuracy: 1.0000 - val_loss: 0.0799 - val_accuracy: 0.9814\n",
+      "Epoch 25/100\n",
+      "50000/50000 [==============================] - 9s 176us/sample - loss: 0.0017 - accuracy: 1.0000 - val_loss: 0.0811 - val_accuracy: 0.9822\n",
+      "Epoch 26/100\n",
+      "50000/50000 [==============================] - 9s 173us/sample - loss: 0.0015 - accuracy: 1.0000 - val_loss: 0.0825 - val_accuracy: 0.9810\n",
+      "Epoch 27/100\n",
+      "50000/50000 [==============================] - 9s 175us/sample - loss: 0.0015 - accuracy: 1.0000 - val_loss: 0.0818 - val_accuracy: 0.9815\n",
+      "Epoch 28/100\n",
+      "50000/50000 [==============================] - 9s 175us/sample - loss: 0.0013 - accuracy: 1.0000 - val_loss: 0.0819 - val_accuracy: 0.9813\n",
+      "Epoch 29/100\n",
+      "50000/50000 [==============================] - 9s 175us/sample - loss: 0.0012 - accuracy: 1.0000 - val_loss: 0.0824 - val_accuracy: 0.9814\n"
+     ]
+    }
+   ],
+   "source": [
+    "early_stopping_cb = keras.callbacks.EarlyStopping(patience=15,\n",
+    "                                                  restore_best_weights=True)\n",
+    "history = mnist_model.fit(x_train, y_train, epochs=100,\n",
+    "                          validation_data=(x_valid, y_valid),\n",
+    "                         callbacks=[early_stopping_cb\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 1s 96us/sample - loss: 0.0692 - accuracy: 0.9787\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.06918588735336671, 0.9787]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnist_model.evaluate(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
