Chapter TensorFlow API in progress

--- a/hands_on_ml2/2020.07.17 - TensorFlow API.ipynb
+++ b/hands_on_ml2/2020.07.17 - TensorFlow API.ipynb
@@ -66,7 +66,7 @@
      "output_type": "stream",
      "text": [
       "Train on 10 samples\n",
-      "10/10 [==============================] - 0s 37ms/sample - loss: 0.0000e+00 - accuracy: 1.0000\n"
+      "10/10 [==============================] - 0s 49ms/sample - loss: 0.0000e+00 - accuracy: 1.0000\n"
      ]
     }
    ],
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1754,10 +1754,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
+    "tf.random.set_seed(42)\n",
+    "np.random.seed(42)\n",
+    "keras.backend.clear_session()\n",
+    "\n",
     "l2_reg = keras.regularizers.l2(0.05)\n",
     "model = keras.models.Sequential([\n",
     "    keras.layers.Dense(30, activation=\"elu\", \n",
@@ -1769,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1824,21 +1828,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "WARNING:tensorflow:Layer dense_34 is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
+      "WARNING:tensorflow:Layer dense is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
       "\n",
       "If you intended to run this layer in float32, you can safely ignore this warning. If in doubt, this warning is likely only an issue if you are porting a TensorFlow 1.X model to TensorFlow 2.\n",
       "\n",
       "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
       "\n",
-      "11610/11610 - mean: 1.4430 - mean_absolute_error: 0.5821\n",
+      "11610/11610 - mean: 1.3955 - mean_absolute_error: 0.5722\n",
       "Epoch 2/5\n",
-      "11610/11610 - mean: 0.6749 - mean_absolute_error: 0.5240\n",
+      "11610/11610 - mean: 0.6774 - mean_absolute_error: 0.5280\n",
       "Epoch 3/5\n",
-      "11610/11610 - mean: 0.6416 - mean_absolute_error: 0.5140\n",
+      "11610/11610 - mean: 0.6351 - mean_absolute_error: 0.5177\n",
       "Epoch 4/5\n",
-      "11610/11610 - mean: 0.6337 - mean_absolute_error: 0.5143\n",
+      "11610/11610 - mean: 0.6384 - mean_absolute_error: 0.5181\n",
       "Epoch 5/5\n",
-      "11610/11610 - mean: 0.6640 - mean_absolute_error: 0.5249\n"
+      "11610/11610 - mean: 0.6440 - mean_absolute_error: 0.5222\n"
      ]
     }
    ],
@@ -1848,7 +1852,7 @@
     "    for step in range(1, n_steps + 1):\n",
     "        X_batch, y_batch = random_batch(X_train_scaled, y_train)\n",
     "        with tf.GradientTape() as tape:\n",
-    "            y_pred = model(X_batch)\n",
+    "            y_pred = model(X_batch, training=True)\n",
     "            main_loss = tf.reduce_mean(loss_fn(y_batch, y_pred))\n",
     "            loss = tf.add_n([main_loss] + model.losses)\n",
     "        gradients = tape.gradient(loss, model.trainable_variables)\n",
@@ -1861,13 +1865,6 @@
     "    for metric in [mean_loss] + metrics:\n",
     "        metric.reset_states()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1893,7 +1890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
